cmake_minimum_required(VERSION 3.16)
project(hexsix_tictactoe LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(SFML 3 REQUIRED COMPONENTS Graphics Window System)

add_executable(hexsix
    main.cpp
    game.cpp
    render.cpp
)

target_link_libraries(hexsix PRIVATE SFML::Graphics SFML::Window SFML::System)
